--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3"
 services:
   web:
-    build: node
+    build: ./docker/node
     tty: true
     volumes:
-      - ./node/src:/src
+      - ./src:/src
     ports:
-      - "8080:3000"
+      - "3000:3000"
