--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -11,7 +11,11 @@
       "DOM"
     ],
     "allowJs": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "exclude": [
     "./node_modules"
