--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,9 @@
     "axios": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.1"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.6.1",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
