--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "strict": true,
     "sourceMap": true,
     "target": "ES2020",
     "module": "ES2020",
@@ -14,9 +15,14 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ]
     }
   },
+  "include": [
+    "src", "@types/index.d.ts"
+  ],
   "exclude": [
     "./node_modules"
   ]
