--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,9 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.2",
+    "jspreadsheet": "^9.3.6",
     "jspreadsheet-ce": "^4.10.2",
+    "jsuites": "^5.0.1",
     "react": "^18.2.0",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.2.0",
