--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@dnd-kit/sortable": "^7.0.2",
+    "@jspreadsheet/autowidth": "^2.2.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.2",
