--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.2",
+    "classnames": "^2.3.2",
     "jspreadsheet": "^9.3.6",
     "jspreadsheet-ce": "^4.10.2",
     "jsuites": "^5.0.1",
